--- a/wp-content/themes/nuitdeboo-child/assets/styles/pages/_frontpage.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/pages/_frontpage.scss
@@ -42,6 +42,8 @@
 }
 
 #global {
+  @extend .row;
+  padding: 30px 0;
   background-image: url('../images/globaldebout-banner.jpg');
   background-size: cover;
   min-height: 128px;
